08_networking/network-policies/00-team-a.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: team-a
  labels:
    name: team-a
---
apiVersion: v1
kind: Pod
metadata:
  name: ta
  namespace: team-a
  labels:
    app: ta
spec:
  containers:
    - name: nginx
      image: joshrosso/nginx-curl:v2
      livenessProbe:
          httpGet:
            port: 80
            path: /
---
apiVersion: v1
kind: Service
metadata:
  name: ta
  namespace: team-a
spec:
  selector:
    app: ta
  ports:
  - port: 80
    targetPort: 80
