08_networking/network-policies/02-team-a-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: team-a-egress
  namespace: team-a
spec:
  podSelector:
    matchLabels:
      app: ta
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 10.42.0.0/16
    ports:
    - protocol: TCP
      port: 80
    - protocol: UDP
      port: 53
